@@ -2,6 +2,7 @@
 
 W.P. van Paassen 	peter@paassen.tmfweb.nl
 Byron Ellacott 		bje@apnic.net
+Ed Sinjiashvili		edsin@swes.saren.ru
 
 */ GRAPHICS */
 
