@@ -1,0 +1,4 @@
+noinst_PROGRAMS=doom_melt
+doom_melt_SOURCES = doom_melt.c 
+doom_melt_LDADD = ../COMMON/libcommon.a
+INCLUDES= -I../COMMON
