@@ -10,11 +10,12 @@ see the file "COPYING" for details.
 
 Thanks to the following people for advice, help, submissions, suggestions or just nice mail
 
-Edwin Rovers - for keeping me up to date with the latest demos and keeping me fascinated -
+Edwin Rovers 	- for keeping me up to date with the latest demos and keeping me fascinated -
 Henk Huitema  	- henk@huitema.org
 Byron Ellacott 	- bje@apnic.net  
 Jamie Zawinski	- jwz@jwz.org
 Dan G. Lunde	- danglund@online.no
 Buddy Smith	- nullset@dookie.net
+Ed Sinjiashvili	- edsin@swes.saren.ru
 
 Feel free to send me your favourite effect!
