@@ -1,9 +1,8 @@
 Adding the following effects:
 
 tunnel,
-water,
 spectrum analyzer
-light
+light, bummapping
 etc.
 
 By the way, feel free to mail your request or code of your favourite effect
